rust/schema/tests/snapshots/patch__instruction-modify-inline.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 75
      characterPercent: 100
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: "The area of a cube is: "
            authorship:
              - - 1
                - 0
                - 0
                - 23
        - type: InstructionInline
          instructionType: Create
          message:
            type: InstructionMessage
            parts:
              - type: Text
                value:
                  string: equation for surface area of cube
                  authorship:
                    - - 1
                      - 0
                      - 0
                      - 33
            authors:
              - type: AuthorRole
                author:
                  type: Person
                  givenNames:
                    - Alice
                roleName: Importer
            provenance:
              - type: ProvenanceCount
                provenanceCategory: Hw
                characterCount: 33
                characterPercent: 100
          prompt: math
          modelParameters:
            type: ModelParameters
        - type: Text
          value:
            string: ".\nFollowed by "
            authorship:
              - - 1
                - 0
                - 0
                - 14
        - type: Emphasis
          content:
            - type: Text
              value:
                string: text.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 75
          characterPercent: 100
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: "The area of a cube is: "
        - type: InstructionInline
          instructionType: Create
          message:
            type: InstructionMessage
            parts:
              - type: Text
                value:
                  string: insert equation for surface area of cube
          modelParameters:
            type: ModelParameters
        - type: Text
          value:
            string: ".\nFollowed by "
        - type: Emphasis
          content:
            - type: Text
              value:
                string: text.
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 82
      characterPercent: 100
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: "The area of a cube is: "
            authorship:
              - - 1
                - 0
                - 0
                - 23
        - type: InstructionInline
          instructionType: Create
          message:
            type: InstructionMessage
            parts:
              - type: Text
                value:
                  string: insert equation for surface area of cube
                  authorship:
                    - - 1
                      - 1
                      - 0
                      - 7
                    - - 1
                      - 0
                      - 0
                      - 33
            authors:
              - type: AuthorRole
                author:
                  type: Person
                  givenNames:
                    - Alice
                roleName: Importer
              - type: AuthorRole
                author:
                  type: Person
                  givenNames:
                    - Bob
                roleName: Writer
            provenance:
              - type: ProvenanceCount
                provenanceCategory: Hw
                characterCount: 40
                characterPercent: 100
          modelParameters:
            type: ModelParameters
        - type: Text
          value:
            string: ".\nFollowed by "
            authorship:
              - - 1
                - 0
                - 0
                - 14
        - type: Emphasis
          content:
            - type: Text
              value:
                string: text.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 82
          characterPercent: 100
ops:
  - - - content
      - 0
      - content
      - 1
      - message
      - parts
      - 0
      - value
    - Apply:
        - Insert:
            - 0
            - "insert "
  - - - content
      - 0
      - content
      - 1
      - prompt
    - Set: ~
