rust/schema/tests/snapshots/patch__instruction-modify-text.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 44
      characterPercent: 100
  content:
    - type: InstructionBlock
      instructionType: Edit
      prompt:
        type: PromptBlock
        instructionType: Edit
        query: more succinct
      message:
        type: InstructionMessage
        content:
          - type: Text
            value:
              string: more succinct
              authorship:
                - - 1
                  - 0
                  - 0
                  - 13
        authors:
          - type: AuthorRole
            author:
              type: Person
              givenNames:
                - Alice
            roleName: Importer
        provenance:
          - type: ProvenanceCount
            provenanceCategory: Hw
            characterCount: 13
            characterPercent: 100
      modelParameters:
        type: ModelParameters
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: A rather long winded paragraph.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 31
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 31
              characterPercent: 100
new:
  type: Article
  content:
    - type: InstructionBlock
      instructionType: Edit
      prompt:
        type: PromptBlock
        instructionType: Edit
        query: more succinct
      message:
        type: InstructionMessage
        content:
          - type: Text
            value:
              string: more succinct
      modelParameters:
        type: ModelParameters
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: A rather long winded paragraph that goes on and on.
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 64
      characterPercent: 100
  content:
    - type: InstructionBlock
      instructionType: Edit
      prompt:
        type: PromptBlock
        instructionType: Edit
        query: more succinct
      message:
        type: InstructionMessage
        content:
          - type: Text
            value:
              string: more succinct
              authorship:
                - - 1
                  - 0
                  - 0
                  - 13
        authors:
          - type: AuthorRole
            author:
              type: Person
              givenNames:
                - Alice
            roleName: Importer
        provenance:
          - type: ProvenanceCount
            provenanceCategory: Hw
            characterCount: 13
            characterPercent: 100
      modelParameters:
        type: ModelParameters
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: A rather long winded paragraph that goes on and on.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 30
                  - - 1
                    - 1
                    - 0
                    - 20
                  - - 1
                    - 0
                    - 0
                    - 1
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Bob
              roleName: Writer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 51
              characterPercent: 100
ops:
  - - - content
      - 0
      - content
      - 0
      - content
      - 0
      - value
    - Apply:
        - Insert:
            - 30
            - " that goes on and on"
