rust/schema/tests/snapshots/patch__instruction-with-footnode.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 73
      characterPercent: 100
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: "The area of a cube is: "
            authorship:
              - - 1
                - 0
                - 0
                - 23
        - type: InstructionInline
          messages:
            - type: InstructionMessage
              parts:
                - type: Text
                  value:
                    string: equation for surface area of cube
                    authorship:
                      - - 1
                        - 0
                        - 0
                        - 33
          assignee: insert-inline-math
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 33
              characterPercent: 100
        - type: Text
          value:
            string: "."
            authorship:
              - - 1
                - 0
                - 0
                - 1
        - type: Note
          noteType: Footnote
          content:
            - type: Paragraph
              content:
                - type: Text
                  value:
                    string: according to AI.
                    authorship:
                      - - 1
                        - 0
                        - 0
                        - 16
              authors:
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Alice
                  roleName: Importer
              provenance:
                - type: ProvenanceCount
                  provenanceCategory: Hw
                  characterCount: 16
                  characterPercent: 100
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 73
          characterPercent: 100
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: "The area of a cube is: "
        - type: InstructionInline
          messages:
            - type: InstructionMessage
              parts:
                - type: Text
                  value: equation for surface area of cube
          assignee: insert-inline-math
        - type: Text
          value: "."
        - type: Note
          noteType: Footnote
          content:
            - type: Paragraph
              content:
                - type: Text
                  value: according to OpenAI.
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 77
      characterPercent: 100
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: "The area of a cube is: "
            authorship:
              - - 1
                - 0
                - 0
                - 23
        - type: InstructionInline
          messages:
            - type: InstructionMessage
              parts:
                - type: Text
                  value:
                    string: equation for surface area of cube
                    authorship:
                      - - 1
                        - 0
                        - 0
                        - 33
          assignee: insert-inline-math
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 33
              characterPercent: 100
        - type: Text
          value:
            string: "."
            authorship:
              - - 1
                - 0
                - 0
                - 1
        - type: Note
          noteType: Footnote
          content:
            - type: Paragraph
              content:
                - type: Text
                  value:
                    string: according to OpenAI.
                    authorship:
                      - - 1
                        - 0
                        - 0
                        - 13
                      - - 1
                        - 1
                        - 0
                        - 4
                      - - 1
                        - 0
                        - 0
                        - 3
              authors:
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Alice
                  roleName: Importer
                - type: AuthorRole
                  author:
                    type: Person
                    givenNames:
                      - Bob
                  roleName: Writer
              provenance:
                - type: ProvenanceCount
                  provenanceCategory: Hw
                  characterCount: 20
                  characterPercent: 100
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 77
          characterPercent: 100
ops:
  - - - content
      - 0
      - content
      - 3
      - content
      - 0
      - content
      - 0
      - value
    - Apply:
        - Insert:
            - 13
            - Open
