rust/schema/tests/snapshots/patch__instruction-wrap.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 65
      characterPercent: 100
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: Some okay text.
            authorship:
              - - 1
                - 0
                - 0
                - 15
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 15
          characterPercent: 100
    - type: Paragraph
      content:
        - type: Text
          value:
            string: A rather long winded paragraph.
            authorship:
              - - 1
                - 0
                - 0
                - 31
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 31
          characterPercent: 100
    - type: Paragraph
      content:
        - type: Text
          value:
            string: A great conclusion.
            authorship:
              - - 1
                - 0
                - 0
                - 19
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 19
          characterPercent: 100
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: Some okay text.
    - type: InstructionBlock
      instructionType: Edit
      prompt:
        type: PromptBlock
        instructionType: Edit
        query: more succinct
      message:
        type: InstructionMessage
        content:
          - type: Text
            value:
              string: more succinct
      modelParameters:
        type: ModelParameters
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: A rather long winded paragraph.
    - type: Paragraph
      content:
        - type: Text
          value:
            string: A great conclusion.
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 78
      characterPercent: 100
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: Some okay text.
            authorship:
              - - 1
                - 0
                - 0
                - 15
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 15
          characterPercent: 100
    - type: InstructionBlock
      instructionType: Edit
      prompt:
        type: PromptBlock
        instructionType: Edit
        query: more succinct
      message:
        type: InstructionMessage
        content:
          - type: Text
            value:
              string: more succinct
              authorship:
                - - 1
                  - 0
                  - 0
                  - 13
        authors:
          - type: AuthorRole
            author:
              type: Person
              givenNames:
                - Bob
            roleName: Writer
        provenance:
          - type: ProvenanceCount
            provenanceCategory: Hw
            characterCount: 13
            characterPercent: 100
      modelParameters:
        type: ModelParameters
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: A rather long winded paragraph.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 31
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Bob
              roleName: Writer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 31
              characterPercent: 100
    - type: Paragraph
      content:
        - type: Text
          value:
            string: A great conclusion.
            authorship:
              - - 1
                - 0
                - 0
                - 19
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 19
          characterPercent: 100
ops:
  - - - content
    - Replace:
        - - 1
          - type: InstructionBlock
            instructionType: Edit
            prompt:
              type: PromptBlock
              instructionType: Edit
              query: more succinct
            message:
              type: InstructionMessage
              content:
                - type: Text
                  value:
                    string: more succinct
            modelParameters:
              type: ModelParameters
            content:
              - type: Paragraph
                content:
                  - type: Text
                    value:
                      string: A rather long winded paragraph.
